add coding assignment

--- a/lecture2.html
+++ b/lecture2.html
@@ -31,6 +31,7 @@
                 <li><a href="lecture4.html" class="text-blue-400">4</a></li>
                 <li><a href="lecture5.html" class="text-blue-400">5</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">End</a></li>
             </ul>
         </nav>
         <h1> 2: Types of Machine Learning</h1>
