--- a/lecture7.html
+++ b/lecture7.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
-    <title>Introduction to NLP and Deep Learning</title>
-    <link href="https://cdn.tailwindcss.com" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <title>Where Next?</title>
 </head>
+
 <body>
     <header class="bg-gray-800 text-white p-4">
         <nav>
@@ -22,37 +23,52 @@
                 <li><a href="lecture7.html" class="text-blue-400">End</a></li>
             </ul>
         </nav>
-        <h1>Introduction to Gradient Descent</h1>
+        <h1>How to Learn what the Machines are Learning</h1>
     </header>
-    <body>
-        <header class="bg-gray-800 text-white p-4">
-            <nav>
-                <ul class="flex space-x-4">
-                    <li><a href="index.html" class="text-blue-400">Home</a></li>
-                    <li><a href="https://web.stanford.edu/class/cs224n/assignments/a1_preview/exploring_word_vectors.html" class="text-blue-400">Stanford NLP Course</a></li>
-                </ul>
-            </nav>
-            <h1>Basics of NLP and Deep Learning</h1>
-        </header>
-    
+    <main class="p-4">
         <div class="section">
             <h2>Introduction to Natural Language Processing (NLP)</h2>
-            <p>Natural Language Processing (NLP) is a field of AI focused on the interaction between computers and humans through natural language. The ultimate objective of NLP is to read, decipher, understand, and make sense of the human languages in a manner that is valuable.</p>
+            <p>Natural Language Processing (NLP) is a field of AI focused on the interaction between computers and
+                humans
+                through natural language. The ultimate objective of NLP is to read, decipher, understand, and make sense
+                of
+                the human languages in a manner that is valuable.</p>
         </div>
         <div class="section">
             <h2>Deep Learning in NLP</h2>
-            <p>Deep learning, a subset of machine learning, uses algorithms inspired by the structure and function of the brain called artificial neural networks. In NLP, deep learning has been applied to a number of tasks including speech recognition, natural language understanding, and text generation.</p>
+            <p>Deep learning, a subset of machine learning, uses algorithms inspired by the structure and function of
+                the
+                brain called artificial neural networks. In NLP, deep learning has been applied to a number of tasks
+                including speech recognition, natural language understanding, and text generation.</p>
         </div>
         <div class="section">
             <h2>Text Embeddings</h2>
-            <p>Text embeddings are a type of word representation that allows words with similar meaning to have a similar representation. They are essential for deep learning models in NLP to process and analyze large amounts of text data.</p>
+            <p>Text embeddings are a type of word representation that allows words with similar meaning to have a
+                similar
+                representation. They are essential for deep learning models in NLP to process and analyze large amounts
+                of
+                text data.</p>
             <img src="./images/text_embeddings.png" alt="Diagram of Text Embeddings">
         </div>
         <div class="section">
             <h2>Understanding Gradient Descent</h2>
-            <p>Gradient Descent is a core optimization technique in deep learning that adjusts the parameters of the neural network algorithms. It is used extensively to minimize the loss function of the models during training.</p>
+            <p>Gradient Descent is a core optimization technique in deep learning that adjusts the parameters of the
+                neural
+                network algorithms. It is used extensively to minimize the loss function of the models during training.
+            </p>
             <img src="./images/gradient_descent.png" alt="Diagram of Gradient Descent">
-            <p>For a practical application of these concepts, including exercises on text embeddings, visit the <a href="https://web.stanford.edu/class/cs224n/assignments/a1_preview/exploring_word_vectors.html" class="text-blue-400">Stanford University engineering course assignments on NLP</a>.</p>
+
         </div>
-    </body>
-    </html>
+        <section class="additional-materials">
+            <p>The Course Assignment is here:
+                <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/tree/main/coding_assignment"
+                    class="text-blue-400">Welcome to CS224N! (Jupyter Notebook copied from Stanford University Engineering)</a>.
+            </p>
+            <p>To be able to make practical applications of these concepts it is essential at this point to build out the coding examples yourself from scratch and to pursue a formal educational track such as 
+                <a href="https://web.stanford.edu/class/cs224n/"
+                    class="text-blue-400">Stanford University Natural Language Processing Group Engineering Course</a>.
+            </p>
+        </section>
+</body>
+
+</html>
