--- a/schedule.html
+++ b/schedule.html
@@ -55,6 +55,11 @@
                 </h3>
                 <a href="lecture6.html" class="text-blue-500 hover:text-blue-700">View Details</a>
             </div>
+            <div class="bg-white shadow-md rounded-lg p-4">
+                <h3 class="text-md font-semibold">End: How to Learn what the Machines are Learning
+                </h3>
+                <a href="lecture7.html" class="text-blue-500 hover:text-blue-700">View Details</a>
+            </div>
             <!-- More weeks can be added in similar fashion -->
         </div>
         <div class="images-section-small">
