--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Welcome to our Lecture Series</h2>
             <p>Join us as we explore the fascinating world of machine learning and AI, from the basics to the latest advancements.</p>
             <!-- Images Section -->
-            <div class="images-section">
+            <div class="section-image">
                 <img src="./images/dog_name_predictor.png" alt="Dog Name Predictor" class="lecture-image">
             </div>
         </section>
