--- a/lecture7.html
+++ b/lecture7.html
@@ -60,11 +60,13 @@
 
         </div>
         <section class="additional-materials">
-            <p>To be able to make practical applications of these concepts it is essential at this point to build out the coding examples yourself from scratch and to pursue a formal educational track such as 
-                <a href="https://web.stanford.edu/class/cs224n/"
-                    class="text-blue-400">Stanford University Natural Language Processing Group Engineering Course</a>.
+            <p>To be able to make practical applications of these concepts it is essential at this point to build out the coding examples yourself from scratch. You can get started by watching 
+                <a href="https://www.youtube.com/watch?v=rmVRLeJRkl4&list=PLoROMvodv4rOSH4v6133s9LFPRHjEmbmJ"
+                    class="text-blue-400">Stanford CS224N: NLP with Deep Learning | Winter 2021 | Lecture 1 - Intro & Word Vectors</a>.
             </p>
+            <p>A python program to generate word2vec examples is available here: 
+                <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/blob/main/scripts/cs224/exploring-word-vectors-1.py"
+                class="text-blue-400">exploring-word-vectors-1.py</a>
         </section>
 </body>
-
 </html>
