--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <ul class="flex space-x-4">
                 <li><a href="index.html" class="text-blue-400">Home</a></li>
                 <li><a href="schedule.html" class="text-blue-400">Schedule</a></li>
+                <li><a href="markmap.html" class="text-blue-400">Mindmap</a></li>
                 <li><a href="contact.html" class="text-blue-400">Contact</a></li>
             </ul>
         </nav>
