--- a/lecture1.html
+++ b/lecture1.html
@@ -71,56 +71,64 @@
             <h2>Smart Personal Assistants</h2>
             <p><strong>Examples:</strong> Siri, Alexa, Google Assistant.</p>
             <img src="./images/smart-personal-assistants.png" alt="Smart Personal Assistants" class="section-image">
-            <p><strong>Technology:</strong> These devices use NLP powered by large language models to understand and respond to spoken commands.</p>
+            <p><strong>Technology:</strong> These devices use advanced NLP powered by large language models to understand and respond to spoken commands. Large language models like GPT (Generative Pre-trained Transformer) and BERT (Bidirectional Encoder Representations from Transformers) are trained on vast amounts of text data. This training enables them to grasp the nuances of language, context, and user intent.</p>
+            <p>Through a process known as 'transfer learning,' these models can be fine-tuned to perform specific tasks such as understanding inquiries about the weather, controlling home automation systems, or providing real-time translations. Smart assistants continuously learn from new interactions to improve their accuracy and user experience.</p>
+            <p><strong>Implementation Details:</strong> These models are hosted on cloud servers, providing the computational power necessary for real-time processing and response. This cloud architecture ensures that the personal assistants can be updated and improved without requiring changes to the hardware of the consumer devices.</p>
+            <p><strong>Privacy and Data Handling:</strong> To address privacy concerns, leading technology companies implement stringent data protection protocols. Users' voice inputs are anonymized and encrypted before being processed by these models, ensuring that personal information remains confidential.</p>
         </section>
         <section>
             <h2>Recommendation Systems</h2>
             <p><strong>Examples:</strong> Netflix, Spotify, Amazon.</p>
             <img src="./images/recommendation-systems.png" alt="Recommendation Systems" class="section-image">
-            <p><strong>Technology:</strong> Machine learning algorithms suggest content based on user behavior and preferences.</p>
+            <p><strong>Technology:</strong> These platforms use collaborative filtering, content-based filtering, and sometimes deep learning to recommend products or media. They analyze past user behavior alongside large datasets of similar decisions made by other users to predict what the user might like next. For instance, Netflix may suggest movies based on genres you've watched before, while Spotify recommends songs by analyzing listening habits.</p>
         </section>
         <section>
             <h2>Social Media Feeds</h2>
             <p><strong>Examples:</strong> Facebook, Instagram, Twitter.</p>
             <img src="./images/social-media-feeds.png" alt="Social Media feeds" class="section-image">
-            <p><strong>Technology:</strong> Algorithms personalize feeds and moderate content using ML techniques.</p>
+            <p><strong>Technology:</strong> Social media platforms use machine learning algorithms to personalize user feeds and moderate content effectively. This involves natural language processing to understand the context of posts and collaborative filtering to deliver content that aligns with user preferences, maximizing engagement and user interaction.</p>
         </section>
         <section>
             <h2>Email Spam and Phishing Detection</h2>
             <p><strong>Examples:</strong> Gmail, Outlook.</p>
             <img src="./images/spam-detection.png" alt="Email Spam and Phishing Detection" class="section-image">
-            <p><strong>Technology:</strong> Deep learning models identify and filter out unwanted emails.</p>
+            <p><strong>Technology:</strong> Email services employ deep learning algorithms to detect spam and phishing attempts by analyzing patterns in the text that may signify malicious intent. Techniques such as text classification and anomaly detection help improve the accuracy of spam filters over time.</p>
         </section>
         <section>
             <h2>Autonomous Vehicles</h2>
             <p><strong>Examples:</strong> Tesla Autopilot, Google Waymo.</p>
             <img src="./images/autonomous-vehicles.png" alt="Autonomous Vehicles" class="section-image">
-            <p><strong>Technology:</strong> Deep learning processes sensor data for safe navigation.</p>
+            <p><strong>Technology:</strong> Autonomous vehicles use a combination of convolutional neural networks and reinforcement learning to process sensor data and make decisions in real-time. This data comes from cameras, LIDAR, and GPS systems to enable safe navigation and obstacle avoidance in diverse driving conditions.</p>
         </section>
         <section>
             <h2>Facial Recognition Systems</h2>
             <p><strong>Examples:</strong> iPhone Face ID, Surveillance Systems.</p>
-            <p><strong>Technology:</strong> CNNs are utilized for tasks such as secure authentication.</p>
+            <img src="./images/facial-recognition-systems.png" alt="Facial Recognition Systems" class="section-image">
+            <p><strong>Technology:</strong> These systems leverage convolutional neural networks (CNNs) to analyze facial features and perform tasks such as identity verification. Advanced algorithms can adapt to variations in light, facial expressions, and angles, ensuring reliability and accuracy.</p>
         </section>
         <section>
             <h2>Voice-to-Text Services</h2>
             <p><strong>Examples:</strong> Voice typing on Google Docs, Real-time captioning on YouTube.</p>
-            <p><strong>Technology:</strong> Speech recognition converts spoken language into text.</p>
+            <img src="./images/voice-to-text-services.png" alt="Voice-to-Text Services" class="section-image">
+            <p><strong>Technology:</strong> These services use advanced speech recognition algorithms powered by deep learning to convert spoken language into written text accurately. Continuous learning from vast amounts of voice data helps improve the precision of speech-to-text engines.</p>
         </section>
         <section>
             <h2>Customer Service Chatbots</h2>
             <p><strong>Examples:</strong> Chatbots on banking websites, customer support on e-commerce sites.</p>
-            <p><strong>Technology:</strong> Chatbots understand and process customer inquiries using NLP.</p>
+            <img src="./images/customer-service-chatbots.png" alt="Customer Service Chatbots" class="section-image">
+            <p><strong>Technology:</strong> Powered by natural language processing, these chatbots are capable of understanding and responding to customer inquiries effectively. They are trained on specific data sets to handle a wide range of queries, from transaction support to troubleshooting, providing a 24/7 customer service solution.</p>
         </section>
         <section>
             <h2>Sentiment Analysis</h2>
             <p><strong>Examples:</strong> Product reviews, market research.</p>
-            <p><strong>Technology:</strong> ML models analyze text to gauge public sentiment.</p>
+            <img src="./images/sentiment-analysis.png" alt="Sentiment Analysis" class="section-image">
+            <p><strong>Technology:</strong> Machine learning models, particularly those based on natural language processing, analyze textual data to determine the sentiment expressed in product reviews or social media posts, aiding companies in understanding consumer emotions and opinions.</p>
         </section>
         <section>
             <h2>Healthcare Diagnostics</h2>
             <p><strong>Examples:</strong> Radiology imaging, predictive diagnostics.</p>
-            <p><strong>Technology:</strong> Deep learning models assist in diagnosing and predicting patient outcomes.</p>
+            <img src="./images/healthcare-diagnostics.png" alt="Healthcare Diagnostics" class="section-image">
+            <p><strong>Technology:</strong> Deep learning models, such as CNNs, are used to analyze medical imaging data, helping to detect and diagnose diseases with a level of accuracy comparable to or sometimes surpassing human experts. These models can also predict patient outcomes based on historical data, improving over time as they process more cases.</p>
         </section>
         <img src="./images/peterson2.png" alt="AI imagined graph 2" class="lecture-image">
     </main>
