--- a/lecture1.html
+++ b/lecture1.html
@@ -104,6 +104,10 @@
                     day AI course crammed into 18 mins of drawing & talking. Target audience: Everyone. </li>
             </ul>
             <ul>
+                <li><a href="markmap.html">
+                        Deep Learning Mind Map</a> See the relationships among the Deep Learning sub topics. </li>
+            </ul>
+            <ul>
                 <li><a href="https://www.youtube.com/watch?v=zjkBMFhNj_g&t=1010s">
                         [1hr Talk] Intro to Large Language Models</a> - Andrej
                     Karpathy </li>
