add dog name generator website url

--- a/lecture5.html
+++ b/lecture5.html
@@ -81,6 +81,9 @@
                 <p>This webpage explains a Python script that generates dog names based on the concept of bigrams. Bigrams are pairs of consecutive characters used to predict the next character in a sequence.</p>
                <p>The code is hosted at: </p>
                <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/blob/main/scripts/dog_name_predictor.py" class="text-blue-400 hover:text-blue-700" target="_blank">dog_name_predictor.py</a> 
+               <p>Try it on a website: </p>
+               <a href="https://arcane-woodland-29255-3c8c871eb38d.herokuapp.com/ " class="text-blue-400 hover:text-blue-700" target="_blank">Dog Name Generator</a> 
+               
                <h2>Python Script Components Explained</h2>
                 <h3>1. Importing Libraries</h3>
                 <p>The script starts by importing necessary Python libraries:</p>
