--- a/lecture3.html
+++ b/lecture3.html
@@ -45,6 +45,7 @@
                         <li>1961: The first step toward modern AI as Frank Rosenblatt proposes the Perceptron, an early
                             neural network.</li>
                             <img src="./images/perceptron-1961.png" alt="Perceptron" class="section-image">
+                            <li><a href="perceptron.html" class="text-blue-400">The Perceptron Explained</a></li>
                         <li>1967: The nearest neighbor algorithm was written, which allowed computers to begin using
                             basic pattern recognition.</li>
                     </ul>
