--- a/schedule.html
+++ b/schedule.html
@@ -30,7 +30,7 @@
             </div>
             <!-- Week 2 -->
             <div class="bg-white shadow-md rounded-lg p-4">
-                <h3 class="text-md font-semibold">Week 2: Types of Machine Learning</h3>
+                <h3 class="text-md font-semibold">Week 2: Learning Path for Machine Learning and Deep Learning</h3>
                 <a href="lecture2.html" class="text-blue-500 hover:text-blue-700">View Details</a>
             </div>
             <!-- Week 3 -->
