--- a/index.html
+++ b/index.html
@@ -4,29 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Standard Testing Machine Learning Lecture Series</title>
+    <title>Machine Learning and Large Language Models Exploration Series</title>
 </head>
 <body>
     <header class="bg-gray-800 text-white p-4">
-        <h1 class="text-xl">Machine Learning and Large Language Models Lecture Series</h1>
+        <h1 class="text-xl">Machine Learning and Large Language Models Exploration Series</h1>
         <nav>
             <ul class="flex space-x-4">
                 <li><a href="index.html" class="text-blue-400">Home</a></li>
-                <li><a href="schedule.html" class="text-blue-400">Schedule</a></li>
                 <li><a href="markmap.html" class="text-blue-400">Mindmap</a></li>
-                <li><a href="contact.html" class="text-blue-400">Contact</a></li>
+                <li><a href="links.html" class="text-blue-400">Links</a></li>
             </ul>
         </nav>
     </header>
     <main class="p-4">
         <section>
-            <h2>Welcome to our Lecture Series</h2>
-            <p>Join us as we explore the fascinating world of machine learning and AI, from the basics to the latest advancements.</p>
+            <h2>Welcome to our Exploration Series</h2>
+            <p>Join us as we investigte the fascinating world of machine learning and AI, from the basics to the latest advancements.</p>
+        </section>
+        <div class="mt-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+            <!-- Week 1 -->
+            <div class="bg-white shadow-md rounded-lg p-4">
+                <h3 class="text-md font-semibold">Week 1: Introduction to AI and ML</h3>
+                <a href="lecture1.html" class="text-blue-500 hover:text-blue-700">View Details</a>
+            </div>
+            <!-- Week 2 -->
+            <div class="bg-white shadow-md rounded-lg p-4">
+                <h3 class="text-md font-semibold">Week 2: Learning Path for Machine Learning and Deep Learning</h3>
+                <a href="lecture2.html" class="text-blue-500 hover:text-blue-700">View Details</a>
+            </div>
+            <!-- Week 3 -->
+            <div class="bg-white shadow-md rounded-lg p-4">
+                <h3 class="text-md font-semibold">Week 3: Historical Timeline of Machine Learning</h3>
+                <a href="lecture3.html" class="text-blue-500 hover:text-blue-700">View Details</a>
+            </div>
+            <!-- Week 4 -->
+            <div class="bg-white shadow-md rounded-lg p-4">
+                <h3 class="text-md font-semibold">Week 4: Neural Nets</h3>
+                <a href="lecture4.html" class="text-blue-500 hover:text-blue-700">View Details</a>
+            </div>
+            <!-- Week 5 -->
+            <div class="bg-white shadow-md rounded-lg p-4">
+                <h3 class="text-md font-semibold">Week 5: Bigrams in Sequence Prediction
+                </h3>
+                <a href="lecture5.html" class="text-blue-500 hover:text-blue-700">View Details</a>
+            </div>
+            <!-- Week 6 -->
+            <div class="bg-white shadow-md rounded-lg p-4">
+                <h3 class="text-md font-semibold">Week 6: Introduction to Text Embeddings in Vector Spaces
+                </h3>
+                <a href="lecture6.html" class="text-blue-500 hover:text-blue-700">View Details</a>
+            </div>
+            <div class="bg-white shadow-md rounded-lg p-4">
+                <h3 class="text-md font-semibold">End: How to Learn what the Machines are Learning
+                </h3>
+                <a href="lecture7.html" class="text-blue-500 hover:text-blue-700">View Details</a>
+            </div>
+            <!-- More weeks can be added in similar fashion -->
+        </div>
+    </main>
+    <main class="p-4">
+        <section>
             <!-- Images Section -->
-
                 <img src="./images/dog_name_predictor.png" alt="Dog Name Predictor" class="lecture-image">
 
         </section>
+
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
         <p>Warm up video: <a href="https://www.youtube.com/watch?v=jHwHPyWkShk" class="text-blue-400 hover:text-blue-700" target="_blank">Bing Chat Behaving Badly - Computerphile</a></p>
