--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="p-4">
         <section>
             <h2>Welcome to our Exploration Series</h2>
-            <p>Join us as we investigte the fascinating world of machine learning and AI, from the basics to the latest advancements.</p>
+            <p>Join us as we investigate the fascinating world of machine learning and AI, from the basics to the latest advancements.</p>
         </section>
         <div class="mt-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
             <!-- Week 1 -->
@@ -40,12 +40,12 @@
             </div>
             <!-- Week 4 -->
             <div class="bg-white shadow-md rounded-lg p-4">
-                <h3 class="text-md font-semibold">Week 4: Neural Nets</h3>
+                <h3 class="text-md font-semibold">Week 4: Bigrams in Sequence Prediction</h3>
                 <a href="lecture4.html" class="text-blue-500 hover:text-blue-700">View Details</a>
             </div>
             <!-- Week 5 -->
             <div class="bg-white shadow-md rounded-lg p-4">
-                <h3 class="text-md font-semibold">Week 5: Bigrams in Sequence Prediction
+                <h3 class="text-md font-semibold">Week 5: How Neural Nets Work
                 </h3>
                 <a href="lecture5.html" class="text-blue-500 hover:text-blue-700">View Details</a>
             </div>
