--- a/lecture7.html
+++ b/lecture7.html
@@ -65,6 +65,19 @@
                     class="text-blue-400">the Hugging Face Course</a>.
             </p>
         </section>
+        <footer>
+            <nav>
+                <ul class="bg-gray-800 text-white p-4">
+                    <li><a href="index.html" class="text-blue-400">Home</a></li>
+                    <li><a href="lecture1.html" class="text-blue-400">1</a></li>
+                    <li><a href="lecture2.html" class="text-blue-400">2</a></li>
+                    <li><a href="lecture3.html" class="text-blue-400">3</a></li>
+                    <li><a href="lecture4.html" class="text-blue-400">4</a></li>
+                    <li><a href="lecture5.html" class="text-blue-400">5</a></li>
+                    <li><a href="lecture6.html" class="text-blue-400">6</a></li>
+                </ul>
+            </nav>
+        </footer>
 </body>
 
 </html>
