--- a/lecture1.html
+++ b/lecture1.html
@@ -144,8 +144,18 @@
         </section>
         
     </main>
-    <footer class="bg-gray-800 text-white p-4 text-center">
-
+    <footer>
+        <nav>
+            <ul class="bg-gray-800 text-white p-4">
+                <li><a href="index.html" class="text-blue-400">Home</a></li>
+                <li><a href="lecture2.html" class="text-blue-400">2</a></li>
+                <li><a href="lecture3.html" class="text-blue-400">3</a></li>
+                <li><a href="lecture4.html" class="text-blue-400">4</a></li>
+                <li><a href="lecture5.html" class="text-blue-400">5</a></li>
+                <li><a href="lecture6.html" class="text-blue-400">6</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">End</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 
