--- a/lecture3.html
+++ b/lecture3.html
@@ -51,7 +51,7 @@
                             basic pattern recognition.</li>
                     </ul>
                 <h3>How Neural Nets Work</h3>
-                    <a href="perceptron.html" class="text-blue-400">The Perceptron Explained</a> is page with examples and a simple neural network code sample</h2>
+                    <a href="perceptron.html" class="text-blue-400">The Perceptron Explained</a> is a page with examples and a simple neural network code sample</h2>
             
                 <p></p>
                 <li><strong>1980s</strong> - Revival and Expansion:
@@ -150,6 +150,17 @@
         </section>
     </main>
     <p></p>
-    <footer class="bg-gray-800 text-white p-4 text-center">
+    <footer>
+        <nav>
+            <ul class="bg-gray-800 text-white p-4">
+                <li><a href="index.html" class="text-blue-400">Home</a></li>
+                <li><a href="lecture1.html" class="text-blue-400">1</a></li>
+                <li><a href="lecture2.html" class="text-blue-400">2</a></li>
+                <li><a href="lecture4.html" class="text-blue-400">4</a></li>
+                <li><a href="lecture5.html" class="text-blue-400">5</a></li>
+                <li><a href="lecture6.html" class="text-blue-400">6</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">End</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
