--- a/lecture5.html
+++ b/lecture5.html
@@ -391,7 +391,18 @@ print(test_output)
 
         
     </main>
-    <footer class="bg-gray-800 text-white p-4 text-center">
+    <footer>
+        <nav>
+            <ul class="bg-gray-800 text-white p-4">
+                <li><a href="index.html" class="text-blue-400">Home</a></li>
+                <li><a href="lecture1.html" class="text-blue-400">1</a></li>
+                <li><a href="lecture2.html" class="text-blue-400">2</a></li>
+                <li><a href="lecture3.html" class="text-blue-400">3</a></li>
+                <li><a href="lecture4.html" class="text-blue-400">4</a></li>
+                <li><a href="lecture6.html" class="text-blue-400">6</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">End</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 
