--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Machine Learning and Large Language Models Exploration Series</title>
 </head>
+
 <body>
     <header class="bg-gray-800 text-white p-4">
         <h1 class="text-xl">Machine Learning and Large Language Models Exploration Series</h1>
@@ -20,7 +22,8 @@
     <main class="p-4">
         <section>
             <h2>Welcome to our Exploration Series</h2>
-            <p>Join us as we investigate the fascinating world of machine learning and AI, from the basics to the latest advancements.</p>
+            <p>Join us as we investigate the fascinating world of machine learning and AI, from the basics to the latest
+                advancements.</p>
         </section>
         <div class="mt-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
             <!-- Week 1 -->
@@ -66,7 +69,7 @@
     <main class="p-4">
         <section>
             <!-- Images Section -->
-                <img src="./images/dog_name_predictor.png" alt="Dog Name Predictor" class="lecture-image">
+            <img src="./images/dog_name_predictor.png" alt="Dog Name Predictor" class="lecture-image">
 
         </section>
 
@@ -86,5 +89,5 @@
         </nav>
     </footer>
 </body>
-</html>
 
+</html>
