--- a/lecture7.html
+++ b/lecture7.html
@@ -60,9 +60,10 @@
 
         </div>
         <section class="additional-materials">
-            <p>To continue learning about Machine Learning, Natural Language Processing and Large Language Models, proceed to
-                <a href="https://huggingface.co/learn/nlp-course/chapter1/1"
-                    class="text-blue-400">the Hugging Face Course</a>.
+            <p>To continue learning about Machine Learning, Natural Language Processing and Large Language Models,
+                proceed to
+                <a href="https://huggingface.co/learn/nlp-course/chapter1/1" class="text-blue-400">the Hugging Face
+                    Course</a>.
             </p>
         </section>
         <footer>
