--- a/links.html
+++ b/links.html
@@ -53,6 +53,11 @@
                         How to build a simple neural network in 9 lines of Python code</a> -
                     Milo Spencer-Harper</li>
             </ul>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=iqmjzecbJHE">
+                    Original transformer paper "Attention is all you need" introduced by a layman | </a> -
+                    Shawn's ML Notes</li>
+            </ul>
         </section>
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
