improve link style

--- a/lecture1.html
+++ b/lecture1.html
@@ -97,6 +97,7 @@
                 habits, user interactions, and even textual descriptions to provide more accurate recommendations.
                 Similarly, Spotify recommends songs by analyzing listening habits, user-created playlists, and audio
                 features such as tempo and rhythm.</p>
+                For more detail see <a href="https://www.youtube.com/watch?v=n3RKsY2H-NE"> How Recommender Systems Work (Netflix/Amazon)</a>
         </section>
         <section>
             <h2>Social Media Feeds</h2>
