--- a/links.html
+++ b/links.html
@@ -43,6 +43,10 @@
                     Karpathy </li>
             </ul>
             <ul>
+                <li><a href="https://www.youtube.com/watch?v=TkwXa7Cvfr8">
+                    Watching Neural Networks Learn</a> </li>
+            </ul>
+            <ul>
                 <li><a href="https://www.youtube.com/watch?v=rURRYI66E54">
                         AI Language Models & Transformers - Computerphile</a> - Presentation of GPT-2 and the
                     Attention/Transformer mechanism from 2019</li>
@@ -57,6 +61,10 @@
                 <li><a href="https://www.youtube.com/watch?v=iqmjzecbJHE">
                     Original transformer paper "Attention is all you need" introduced by a layman | </a> -
                     Shawn's ML Notes</li>
+            </ul>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=4Bdc55j80l8">
+                    Illustrated Guide to Transformers Neural Network: A step by step explanation</a></li>
             </ul>
         </section>
     </main>
