--- a/links.html
+++ b/links.html
@@ -66,6 +66,10 @@
                 <li><a href="https://www.youtube.com/watch?v=4Bdc55j80l8">
                     Illustrated Guide to Transformers Neural Network: A step by step explanation</a></li>
             </ul>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=ySus5ZS0b94">
+                    OpenAI Embeddings and Vector Databases Crash Course</a></li>
+            </ul>
         </section>
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
