--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <a href="lecture6.html" class="text-blue-500 hover:text-blue-700">View Details</a>
             </div>
             <div class="bg-white shadow-md rounded-lg p-4">
-                <h3 class="text-md font-semibold">End: How to Learn what the Machines are Learning
+                <h3 class="text-md font-semibold">Week 7: Transformer Architecture
                 </h3>
                 <a href="lecture7.html" class="text-blue-500 hover:text-blue-700">View Details</a>
             </div>
@@ -84,7 +84,7 @@
                 <li><a href="lecture4.html" class="text-blue-400">4</a></li>
                 <li><a href="lecture5.html" class="text-blue-400">5</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
-                <li><a href="lecture7.html" class="text-blue-400">End</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">7</a></li>
             </ul>
         </nav>
     </footer>
