--- a/lecture1.html
+++ b/lecture1.html
@@ -19,7 +19,7 @@
                 <li><a href="lecture4.html" class="text-blue-400">4</a></li>
                 <li><a href="lecture5.html" class="text-blue-400">5</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
-                <li><a href="lecture7.html" class="text-blue-400">End</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">7</a></li>
             </ul>
         </nav>
         <h1>1: Introduction to AI and ML</h1>
@@ -223,7 +223,7 @@
                 <li><a href="lecture4.html" class="text-blue-400">4</a></li>
                 <li><a href="lecture5.html" class="text-blue-400">5</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
-                <li><a href="lecture7.html" class="text-blue-400">End</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">7</a></li>
             </ul>
         </nav>
     </footer>
