--- a/lecture4.html
+++ b/lecture4.html
@@ -31,7 +31,7 @@
                 <li><a href="lecture3.html" class="text-blue-400">3</a></li>
                 <li><a href="lecture5.html" class="text-blue-400">5</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
-                <li><a href="lecture7.html" class="text-blue-400">End</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">7</a></li>
             </ul>
         </nav>
         <h1> 4: Bigrams in Sequence Prediction</h1>
@@ -167,7 +167,7 @@
                 <li><a href="lecture3.html" class="text-blue-400">3</a></li>
                 <li><a href="lecture5.html" class="text-blue-400">5</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
-                <li><a href="lecture7.html" class="text-blue-400">End</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">7</a></li>
             </ul>
         </nav>
     </footer>
