--- a/lecture5.html
+++ b/lecture5.html
@@ -21,7 +21,7 @@
                 <li><a href="lecture3.html" class="text-blue-400">3</a></li>
                 <li><a href="lecture4.html" class="text-blue-400">4</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
-                <li><a href="lecture7.html" class="text-blue-400">End</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">7</a></li>
             </ul>
         </nav>
         <h1>5: How Neural Networks Work</h1>
@@ -481,7 +481,7 @@ print(test_output)
                 <li><a href="lecture3.html" class="text-blue-400">3</a></li>
                 <li><a href="lecture4.html" class="text-blue-400">4</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
-                <li><a href="lecture7.html" class="text-blue-400">End</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">7</a></li>
             </ul>
         </nav>
     </footer>
