--- a/lecture7.html
+++ b/lecture7.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Where Next?</title>
+    <title>Exploration 1: Introduction to AI and ML</title>
 </head>
 
 <body>
@@ -14,71 +14,54 @@
         <nav>
             <ul class="flex space-x-4">
                 <li><a href="index.html" class="text-blue-400">Home</a></li>
-                <li><a href="lecture1.html" class="text-blue-400">1</a></li>
                 <li><a href="lecture2.html" class="text-blue-400">2</a></li>
                 <li><a href="lecture3.html" class="text-blue-400">3</a></li>
                 <li><a href="lecture4.html" class="text-blue-400">4</a></li>
                 <li><a href="lecture5.html" class="text-blue-400">5</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
-                <li><a href="lecture7.html" class="text-blue-400">End</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">7</a></li>
             </ul>
         </nav>
-        <h1>How to Learn what the Machines are Learning</h1>
+        <h1>1: Introduction to AI and ML</h1>
     </header>
     <main class="p-4">
-        <div class="section">
-            <h2>Introduction to Natural Language Processing (NLP)</h2>
-            <p>Natural Language Processing (NLP) is a field of AI focused on the interaction between computers and
-                humans
-                through natural language. The ultimate objective of NLP is to read, decipher, understand, and make sense
-                of
-                the human languages in a manner that is valuable.</p>
+        <div class="flex flex-col items-center">
+            <img src="./images/transformer-architecture.png" alt="Transformer Architecture Diagram" class="w-full md:w-1/2">
+            <div class="mt-4">
+                <h2 class="text-xl font-bold">Transformer Model Architecture</h2>
+                <p class="mt-2">This diagram represents the architecture of a Transformer model, which is a type of deep learning model commonly used for natural language processing tasks. Here is a detailed description of each step:</p>
+                <ol class="list-decimal mt-4 space-y-2">
+                    <li><strong>Input Embedding:</strong> The raw input tokens (words) are converted into vectors of fixed size, known as embeddings. This step maps each word to a high-dimensional space where words with similar meanings are closer together.</li>
+                    <li><strong>Positional Encoding:</strong> Since the Transformer model does not have a sense of word order, positional encodings are added to the input embeddings to provide information about the position of each word in the sequence. These encodings are added element-wise to the input embeddings.</li>
+                    <li><strong>Add & Norm:</strong> This step involves adding the input (either embeddings or the output of the previous layer) to the output of a sub-layer (such as Multi-Head Attention or Feed Forward) and then normalizing the result. This helps stabilize and speed up the training process.</li>
+                    <li><strong>Multi-Head Attention:</strong> This component allows the model to focus on different parts of the input sequence simultaneously. It uses multiple attention heads to capture different aspects of the relationships between words in the sequence. Each head performs an attention operation, and their outputs are concatenated and linearly transformed.</li>
+                    <li><strong>Feed Forward:</strong> A fully connected feed-forward neural network is applied to each position separately and identically. This consists of two linear transformations with a ReLU activation in between.</li>
+                    <li><strong>Add & Norm:</strong> Similar to the previous Add & Norm step, the output of the feed-forward network is added to the input and normalized.</li>
+                    <li><strong>Masked Multi-Head Attention (Decoder Only):</strong> In the decoder, masked multi-head attention is used to ensure that each position can only attend to previous positions in the output sequence. This prevents the model from seeing future tokens during training, which is crucial for autoregressive generation.</li>
+                    <li><strong>Add & Norm:</strong> The same Add & Norm step is applied after the masked multi-head attention.</li>
+                    <li><strong>Multi-Head Attention (Decoder Only):</strong> The decoder also includes a regular multi-head attention layer, but it attends to the encoder's output sequence. This helps the decoder to generate the output sequence based on the encoded input sequence.</li>
+                    <li><strong>Add & Norm:</strong> Again, the Add & Norm step is applied after the multi-head attention layer.</li>
+                    <li><strong>Feed Forward (Decoder Only):</strong> The decoder includes a feed-forward neural network similar to the one in the encoder.</li>
+                    <li><strong>Add & Norm:</strong> The final Add & Norm step is applied after the feed-forward network in the decoder.</li>
+                    <li><strong>Linear & Softmax:</strong> The output of the last Add & Norm layer is fed into a linear transformation followed by a softmax function. The linear transformation maps the output to the vocabulary size, and the softmax function converts the scores into probabilities for each token in the vocabulary.</li>
+                    <li><strong>Output Probabilities:</strong> The final output is a probability distribution over the vocabulary for each position in the output sequence, indicating the likelihood of each token being the correct next token in the sequence.</li>
+                </ol>
+            </div>
         </div>
-        <div class="section">
-            <h2>Deep Learning in NLP</h2>
-            <p>Deep learning, a subset of machine learning, uses algorithms inspired by the structure and function of
-                the
-                brain called artificial neural networks. In NLP, deep learning has been applied to a number of tasks
-                including speech recognition, natural language understanding, and text generation.</p>
-        </div>
-        <div class="section">
-            <h2>Text Embeddings</h2>
-            <p>Text embeddings are a type of word representation that allows words with similar meaning to have a
-                similar
-                representation. They are essential for deep learning models in NLP to process and analyze large amounts
-                of
-                text data.</p>
-            <img src="./images/text_embeddings.png" alt="Diagram of Text Embeddings">
-        </div>
-        <div class="section">
-            <h2>Understanding Gradient Descent</h2>
-            <p>Gradient Descent is a core optimization technique in deep learning that adjusts the parameters of the
-                neural
-                network algorithms. It is used extensively to minimize the loss function of the models during training.
-            </p>
-            <img src="./images/gradient_descent.png" alt="Diagram of Gradient Descent">
-
-        </div>
-        <section class="additional-materials">
-            <p>To continue learning about Machine Learning, Natural Language Processing and Large Language Models,
-                proceed to
-                <a href="https://huggingface.co/learn/nlp-course/chapter1/1" class="text-blue-400">the Hugging Face
-                    Course</a>.
-            </p>
-        </section>
-        <footer>
-            <nav>
-                <ul class="bg-gray-800 text-white p-4">
-                    <li><a href="index.html" class="text-blue-400">Home</a></li>
-                    <li><a href="lecture1.html" class="text-blue-400">1</a></li>
-                    <li><a href="lecture2.html" class="text-blue-400">2</a></li>
-                    <li><a href="lecture3.html" class="text-blue-400">3</a></li>
-                    <li><a href="lecture4.html" class="text-blue-400">4</a></li>
-                    <li><a href="lecture5.html" class="text-blue-400">5</a></li>
-                    <li><a href="lecture6.html" class="text-blue-400">6</a></li>
-                </ul>
-            </nav>
-        </footer>
+    </main>
+    <footer>
+        <nav>
+            <ul class="bg-gray-800 text-white p-4">
+                <li><a href="index.html" class="text-blue-400">Home</a></li>
+                <li><a href="lecture2.html" class="text-blue-400">2</a></li>
+                <li><a href="lecture3.html" class="text-blue-400">3</a></li>
+                <li><a href="lecture4.html" class="text-blue-400">4</a></li>
+                <li><a href="lecture5.html" class="text-blue-400">5</a></li>
+                <li><a href="lecture6.html" class="text-blue-400">6</a></li>
+                <li><a href="lecture7.html" class="text-blue-400">7</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 
 </html>
