--- a/lecture7.html
+++ b/lecture7.html
@@ -22,7 +22,7 @@
                 <li><a href="lecture7.html" class="text-blue-400">7</a></li>
             </ul>
         </nav>
-        <h1>1: Introduction to AI and ML</h1>
+        <h1>Transformer Architecture</h1>
     </header>
     <main class="p-4">
         <div class="flex flex-col items-center">
