--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                 </h3>
                 <a href="lecture7.html" class="text-blue-500 hover:text-blue-700">View Details</a>
             </div>
+            <div class="bg-white shadow-md rounded-lg p-4">
+                <h3 class="text-md font-semibold">Week 8: Machine Learning and Blockchain Data
+                </h3>
+                <a href="lecture8.html" class="text-blue-500 hover:text-blue-700">View Details</a>
+            </div>
+            <!-- More we
             <!-- More weeks can be added in similar fashion -->
         </div>
     </main>
@@ -85,6 +91,7 @@
                 <li><a href="lecture5.html" class="text-blue-400">5</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
                 <li><a href="lecture7.html" class="text-blue-400">7</a></li>
+                <li><a href="lecture8.html" class="text-blue-400">8</a></li>
             </ul>
         </nav>
     </footer>
