--- a/lecture6.html
+++ b/lecture6.html
@@ -22,6 +22,7 @@
                 <li><a href="lecture4.html" class="text-blue-400">4</a></li>
                 <li><a href="lecture5.html" class="text-blue-400">5</a></li>
                 <li><a href="lecture7.html" class="text-blue-400">7</a></li>
+                <li><a href="lecture8.html" class="text-blue-400">8</a></li>
             </ul>
         </nav>
         <h1>6: Introduction to Text Embeddings in Vector Spaces</h1>
@@ -226,6 +227,7 @@
                 <li><a href="lecture4.html" class="text-blue-400">4</a></li>
                 <li><a href="lecture5.html" class="text-blue-400">5</a></li>
                 <li><a href="lecture7.html" class="text-blue-400">7</a></li>
+                <li><a href="lecture8.html" class="text-blue-400">8</a></li>
             </ul>
         </nav>
     </footer>
