--- a/lecture7.html
+++ b/lecture7.html
@@ -20,6 +20,8 @@
                 <li><a href="lecture5.html" class="text-blue-400">5</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
                 <li><a href="lecture7.html" class="text-blue-400">7</a></li>
+                <li><a href="lecture8.html" class="text-blue-400">8</a></li>
+
             </ul>
         </nav>
         <h1>Transformer Architecture</h1>
@@ -30,7 +32,7 @@
             <div class="mt-4">
                 <h2 class="text-xl font-bold">Transformer Model Architecture</h2>
                 <p class="mt-2">This diagram represents the architecture of a Transformer model, which is a type of deep learning model commonly used for natural language processing tasks. Here is a detailed description of each step:</p>
-                <ol class="list-decimal mt-4 space-y-2">
+                <ol class="list-decimal mt-4 space-y-4">
                     <li><strong>Input Embedding:</strong> The raw input tokens (words) are converted into vectors of fixed size, known as embeddings. This step maps each word to a high-dimensional space where words with similar meanings are closer together.</li>
                     <li><strong>Positional Encoding:</strong> Since the Transformer model does not have a sense of word order, positional encodings are added to the input embeddings to provide information about the position of each word in the sequence. These encodings are added element-wise to the input embeddings.</li>
                     <li><strong>Add & Norm:</strong> This step involves adding the input (either embeddings or the output of the previous layer) to the output of a sub-layer (such as Multi-Head Attention or Feed Forward) and then normalizing the result. This helps stabilize and speed up the training process.</li>
@@ -59,6 +61,8 @@
                 <li><a href="lecture5.html" class="text-blue-400">5</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
                 <li><a href="lecture7.html" class="text-blue-400">7</a></li>
+                <li><a href="lecture8.html" class="text-blue-400">8</a></li>
+
             </ul>
         </nav>
     </footer>
