--- a/lecture2.html
+++ b/lecture2.html
@@ -37,6 +37,7 @@
                 <li><a href="lecture5.html" class="text-blue-400">5</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
                 <li><a href="lecture7.html" class="text-blue-400">7</a></li>
+                <li><a href="lecture8.html" class="text-blue-400">8</a></li>
             </ul>
         </nav>
         <h1> 2: Learning Path for Machine Learning and Deep Learning</h1>
@@ -351,6 +352,7 @@
                 <li><a href="lecture5.html" class="text-blue-400">5</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
                 <li><a href="lecture7.html" class="text-blue-400">7</a></li>
+                <li><a href="lecture8.html" class="text-blue-400">8</a></li>
             </ul>
         </nav>
     </footer>
