--- a/lecture5.html
+++ b/lecture5.html
@@ -22,6 +22,7 @@
                 <li><a href="lecture4.html" class="text-blue-400">4</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
                 <li><a href="lecture7.html" class="text-blue-400">7</a></li>
+                <li><a href="lecture8.html" class="text-blue-400">8</a></li>
             </ul>
         </nav>
         <h1>5: How Neural Networks Work</h1>
@@ -482,6 +483,7 @@ print(test_output)
                 <li><a href="lecture4.html" class="text-blue-400">4</a></li>
                 <li><a href="lecture6.html" class="text-blue-400">6</a></li>
                 <li><a href="lecture7.html" class="text-blue-400">7</a></li>
+                <li><a href="lecture8.html" class="text-blue-400">8</a></li>
             </ul>
         </nav>
     </footer>
